# osu-taiko-trainer

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-uploader-tauri.yml  build-uploader.yml
packaging/: launcher.py  taiko-uploader.spec
scripts/: backup.sh  cleanup_bad_maps.py
src/taiko_trainer/: __init__.py  analyze.py  auth.py  cheese.py  classification.py  cleanup.py  config.py  db.py  features.py  ingest.py  judgment.py  kddk_patterns.py  migrate.py  models.py  mods.py  osr_parser.py  osu_api.py  osu_parser.py  parity.py  player.py  report.py  scan_lazer.py  scoring.py  server.py  sessions.py  smoke.py  suggest.py  uploader.py  uploader_gui.py  validate.py  workflow.py
uploader-app/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
uploader-app/src/: App.svelte  app.css
uploader-app/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
uploader-app/src-tauri/capabilities/: default.json
uploader-app/src-tauri/src/: commands.rs  config.rs  folder.rs  http.rs  lib.rs  logging.rs  main.rs  state.rs  watcher.rs  worker.rs
uploader-app/src/lib/: Sidebar.svelte  UploadResultToast.svelte  stores.js  updater.js
uploader-app/src/lib/screens/: About.svelte  Home.svelte  Import.svelte  Replays.svelte  Settings.svelte  Uploads.svelte
