[package]
name = "taiko-uploader"
version = "0.2.0"
description = "osu!taiko trainer uploader companion"
authors = ["Acrith"]
edition = "2021"

# Two crate types so we can call the same entry-point from the desktop
# `main.rs` and any mobile shell later. See tauri v2 docs on lib-target.
[lib]
name = "taiko_uploader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Compile-time smaller binaries for release builds.
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
